--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Página de Login</h1>
     <div class="box">
         <input type="text" name="email" size="15" value="e-mail">
-        <input type="password" name="senha" size="15" value="senha">
+        <input type="password" name="senha" size="15" value="">
         <button>ENTRAR</button>
         <p>Ainda não tem uma conta?<button>Criar conta</button></p>
     </div>
